--- a/configure.ac
+++ b/configure.ac
@@ -398,7 +398,7 @@ case "${host}" in
 
 esac
 
-if test "$OPENAL_OK" == "no" -a "x$enable_headless" != "xyes"; then
+if test "$OPENAL_OK" = "no" -a "x$enable_headless" != "xyes"; then
     echo
     echo "You *must* have the openal library installed on your system to build"
     echo "SimGear!"
@@ -409,7 +409,7 @@ if test "$OPENAL_OK" == "no" -a "x$enable_headless" != "xyes"; then
     exit
 fi
 
-if test "$ALUT_OK" == "no" -a "x$enable_headless" != "xyes"; then
+if test "$ALUT_OK" = "no" -a "x$enable_headless" != "xyes"; then
     echo
     echo "You *must* have the alut library installed on your system to build"
     echo "SimGear!"
