automake: add thread libs to the io tests.

--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -47,7 +47,7 @@ tcp_server_LDADD = \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	-lz \
 	$(network_LIBS) \
-	$(osg_LIBS) \
+	$(osg_LIBS) $(thread_LIBS) \
 	$(base_LIBS)
 
 tcp_client_SOURCES = tcp_client.cxx
@@ -61,7 +61,7 @@ tcp_client_LDADD = \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	-lz \
 	$(network_LIBS) \
-	$(osg_LIBS) \
+	$(osg_LIBS) $(thread_LIBS) \
 	$(base_LIBS)
 
 socktest_SOURCES = socktest.cxx
@@ -75,7 +75,7 @@ socktest_LDADD = \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
     -lz \
 	$(network_LIBS) \
-	$(osg_LIBS) \
+	$(osg_LIBS) $(thread_LIBS) \
 	$(base_LIBS) 
 
 lowtest_SOURCES = lowtest.cxx
@@ -87,7 +87,7 @@ lowtest_LDADD = \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
-	$(base_LIBS) -lz $(osg_LIBS)
+	$(thread_LIBS) $(base_LIBS) -lz $(osg_LIBS)
 
 decode_binobj_SOURCES = decode_binobj.cxx
 
@@ -97,4 +97,4 @@ decode_binobj_LDADD = \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
-	$(base_LIBS) -lz $(osg_LIBS)
+	$(thread_LIBS) $(base_LIBS) -lz $(osg_LIBS)
