Build decode_bin helper under CMake.

--- a/simgear/io/CMakeLists.txt
+++ b/simgear/io/CMakeLists.txt
@@ -57,3 +57,12 @@ target_link_libraries(httpget
     ${CMAKE_THREAD_LIBS_INIT}
     ${WINSOCK_LIBRARY}
     ${RT_LIBRARY})
+
+add_executable(decode_binobj decode_binobj.cxx)
+target_link_libraries(decode_binobj
+    sgbucket sgio sgstructure sgthreads sgtiming sgmisc sgdebug
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${WINSOCK_LIBRARY}
+    ${ZLIB_LIBRARY}
+    ${RT_LIBRARY})
+        
