--- a/simgear/simgear_config_cmake.h.in
+++ b/simgear/simgear_config_cmake.h.in
@@ -16,5 +16,7 @@
 #cmakedefine HAVE_SVN_CLIENT_H
 #cmakedefine HAVE_LIBSVN_CLIENT_1
 
+#cmakedefine GCC_ATOMIC_BUILTINS_FOUND
+
 // set if building headless (no OSG or OpenGL libs)
 #cmakedefine NO_OPENSCENEGRAPH_INTERFACE
