Keep VC90 project file working with SGAtomic

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1500,6 +1500,14 @@
 			Name="Lib_sgstructure"
 			>
 			<File
+				RelativePath="..\..\simgear\structure\SGAtomic.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\structure\SGAtomic.cxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\structure\callback.hxx"
 				>
 			</File>
