--- a/simgear/sound/CMakeLists.txt
+++ b/simgear/sound/CMakeLists.txt
@@ -17,3 +17,21 @@ set(SOURCES
     )
 
 simgear_component(sound sound "${SOURCES}" "${HEADERS}")
+
+set(SOUND_TEST_LIBS
+    sgsound sgio sgmath sgstructure sgthreads sgtiming sgmisc sgdebug
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${RT_LIBRARY}
+    ${ALUT_LIBRARY} ${OPENAL_LIBRARY})
+
+function(create_test TEST_NAME)
+    add_executable(${TEST_NAME} ${TEST_NAME}.cxx)
+    target_link_libraries(${TEST_NAME} ${SOUND_TEST_LIBS})
+    set_target_properties(${TEST_NAME} PROPERTIES
+            COMPILE_DEFINITIONS "SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\"" )
+endfunction()
+    
+create_test(openal_test1)
+create_test(openal_test2)
+create_test(openal_test3)
+create_test(openal_test4)
