--- a/simgear/hla/Makefile.am
+++ b/simgear/hla/Makefile.am
@@ -11,6 +11,7 @@ libsghla_a_HEADERS = \
 	HLABasicDataElement.hxx \
 	HLABasicDataType.hxx \
 	HLADataElement.hxx \
+	HLADataElementVisitor.hxx \
 	HLADataType.hxx \
 	HLADataTypeVisitor.hxx \
 	HLAEnumeratedDataElement.hxx \
