--- a/simgear/magvar/CMakeLists.txt
+++ b/simgear/magvar/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SOURCES magvar.cxx coremag.cxx)
 
 simgear_component(magvar magvar "${SOURCES}" "${HEADERS}")
 
-
+if(ENABLE_TESTS)
 add_executable(test_magvar testmagvar.cxx )
 target_link_libraries(test_magvar sgmagvar)
-
+endif(ENABLE_TESTS)
