--- a/simgear/math/CMakeLists.txt
+++ b/simgear/math/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCES
 
 simgear_component(math math "${SOURCES}" "${HEADERS}")
 
+if(ENABLE_TESTS)
 add_executable(math_test SGMathTest.cxx)
 target_link_libraries(math_test sgmath sgstructure sgdebug)
 add_test(math ${EXECUTABLE_OUTPUT_PATH}/math_test)
@@ -52,3 +53,4 @@ add_test(math ${EXECUTABLE_OUTPUT_PATH}/math_test)
 add_executable(geometry_test SGGeometryTest.cxx)
 target_link_libraries(geometry_test sgmath sgstructure sgdebug)
 add_test(geometry ${EXECUTABLE_OUTPUT_PATH}/geometry_test)
+endif(ENABLE_TESTS)
