--- a/simgear/props/CMakeLists.txt
+++ b/simgear/props/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SOURCES
 
 simgear_component(props props "${SOURCES}" "${HEADERS}")
 
+if(ENABLE_TESTS)
 add_executable(test_props props_test.cxx)
 target_link_libraries(test_props sgprops sgxml sgstructure sgmisc sgdebug)
 add_test(test_props ${EXECUTABLE_OUTPUT_PATH}/test_props)
@@ -29,3 +30,4 @@ add_test(test_props ${EXECUTABLE_OUTPUT_PATH}/test_props)
 add_executable(test_propertyObject propertyObject_test.cxx)
 target_link_libraries(test_propertyObject sgprops sgstructure sgdebug)
 add_test(test_propertyObject ${EXECUTABLE_OUTPUT_PATH}/test_propertyObject)
+endif(ENABLE_TESTS)
