--- a/simgear/environment/CMakeLists.txt
+++ b/simgear/environment/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES metar.cxx precipitation.cxx)
 
 simgear_component(environment environment "${SOURCES}" "${HEADERS}")
 
+if(ENABLE_TESTS)
 add_executable(test_metar test_metar.cxx)
 target_link_libraries(test_metar
     sgenvironment sgstructure sgmisc sgdebug
@@ -14,3 +15,4 @@ target_link_libraries(test_metar
     ${RT_LIBRARY}) 
     
 add_test(metar ${EXECUTABLE_OUTPUT_PATH}/test_metar)
+endif(ENABLE_TESTS)
