--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES
 
 simgear_component(misc misc "${SOURCES}" "${HEADERS}")
 
+if(ENABLE_TESTS)
 add_executable(test_tabbed_values tabbed_values_test.cxx)
 add_test(tabbed_values ${EXECUTABLE_OUTPUT_PATH}/test_tabbed_values)
 target_link_libraries(test_tabbed_values sgmisc)
@@ -43,4 +44,4 @@ target_link_libraries(test_strings sgmisc)
 add_executable(test_path path_test.cxx )
 add_test(test_path ${EXECUTABLE_OUTPUT_PATH}/test_path)
 target_link_libraries(test_path sgmisc sgdebug)
-
+endif(ENABLE_TESTS)
