Get all the tests linking with shared-simgear, and duplicate the awkward core functions into a new file, pending a proper cleanup.

--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -33,15 +33,22 @@ set(SOURCES
 simgear_component(misc misc "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
+
+if (SIMGEAR_SHARED)
+    set(TEST_LIBS SimGearCore)
+else()
+    set(TEST_LIBS sgmisc sgdebug)
+endif()
+
 add_executable(test_tabbed_values tabbed_values_test.cxx)
 add_test(tabbed_values ${EXECUTABLE_OUTPUT_PATH}/test_tabbed_values)
-target_link_libraries(test_tabbed_values sgmisc)
+target_link_libraries(test_tabbed_values ${TEST_LIBS})
 
 add_executable(test_strings strutils_test.cxx )
 add_test(test_strings ${EXECUTABLE_OUTPUT_PATH}/test_strings)
-target_link_libraries(test_strings sgmisc)
+target_link_libraries(test_strings ${TEST_LIBS})
 
 add_executable(test_path path_test.cxx )
 add_test(test_path ${EXECUTABLE_OUTPUT_PATH}/test_path)
-target_link_libraries(test_path sgmisc sgdebug)
+target_link_libraries(test_path ${TEST_LIBS})
 endif(ENABLE_TESTS)
