--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -69,7 +69,8 @@ if(SIMGEAR_SHARED)
             ENDIF(APPLE)
         endif(LIBSVN_FOUND)
         
-    
+        list(APPEND sceneSources scene/util/SGCoreOSGDependant.cxx)
+        
         add_library(SimGearScene SHARED ${sceneSources})
       # set_property(TARGET SimGearScene PROPERTY FRAMEWORK 1)
       # set_property(TARGET SimGearScene PROPERTY PUBLIC_HEADER "${publicHeaders}")
