--- a/simgear/magvar/CMakeLists.txt
+++ b/simgear/magvar/CMakeLists.txt
@@ -8,5 +8,11 @@ simgear_component(magvar magvar "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
 add_executable(test_magvar testmagvar.cxx )
-target_link_libraries(test_magvar sgmagvar)
+
+if (SIMGEAR_SHARED)
+    target_link_libraries(test_magvar SimGearCore)
+else()
+    target_link_libraries(test_magvar sgmagvar)
+endif()
+
 endif(ENABLE_TESTS)
