--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ INSTALL
 SimGear.spec
 *.o
 lib*.a
+.*.swp
 cmake_install.cmake
 CMakeFiles
 CMakeCache.txt
@@ -11,4 +12,5 @@ CPackSourceConfig.cmake
 cmake_uninstall.cmake
 CTestTestfile.cmake
 install_manifest.txt
-
+build
+Build
