#512: fix compatibility issue with boost 1.48.0 Thanks to handigehansje.

--- a/simgear/structure/CMakeLists.txt
+++ b/simgear/structure/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 include (SimGearComponent)
 
-set(HEADERS 
+set(HEADERS
     OSGUtils.hxx
     OSGVersion.hxx
     SGAtomic.hxx
@@ -14,6 +14,7 @@ set(HEADERS
     SGWeakPtr.hxx
     SGWeakReferenced.hxx
     SGPerfMon.hxx
+    singleton.hpp
     Singleton.hxx
     StringTable.hxx
     callback.hxx
@@ -23,8 +24,8 @@ set(HEADERS
     intern.hxx
     subsystem_mgr.hxx
     )
-    
-set(SOURCES 
+
+set(SOURCES
     SGAtomic.cxx
     SGBinding.cxx
     SGExpression.cxx
