--- a/simgear/scene/model/CMakeLists.txt
+++ b/simgear/scene/model/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCES
     ModelRegistry.cxx
     SGClipGroup.cxx
     SGInteractionAnimation.cxx
+    SGLightAnimation.cxx
     SGMaterialAnimation.cxx
     SGOffsetTransform.cxx
     SGReaderWriterXML.cxx
